# sfeMovie-cmake-blank-template

./: CMakeLists.txt  FindFFMPEG.cmake  FindSFML.cmake
